--- a/www/accounts/locale/zh/LC_MESSAGES/django.po
+++ b/www/accounts/locale/zh/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-02-19 12:13+0800\n"
+"POT-Creation-Date: 2016-02-26 15:31+0800\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -84,6 +84,26 @@ msgstr "确认密码"
 msgid "Enter the same password as above, for verification."
 msgstr "为了确认密码是否正确，请重复输入一次密码"
 
+#: templates/accounts/activation.html:3
+msgid "Activation"
+msgstr "激活"
+
+#: templates/accounts/activation.html:8
+msgid "Your account has been activated, have fun."
+msgstr "您的账户已经被激活，欢迎使用。"
+
+#: templates/accounts/activation.html:10
+msgid "Failed to activate your account, please contact to web administrator."
+msgstr "您的账户激活失败，请联系本站管理员。"
+
+#: templates/accounts/activation_email_body.html:2
+msgid "Thank you for Registering. To activate you account, please visit:"
+msgstr "谢谢您注册为本站会员。请访问这里以激活您的账户："
+
+#: templates/accounts/activation_email_subject.html:2
+msgid "Account activation from website: "
+msgstr "激活账户邮件，来自："
+
 #: templates/accounts/base.html:43
 msgid "Logout"
 msgstr "登出"
@@ -124,16 +144,4 @@ msgstr "抱歉，目前已暂停注册"
 
 #: templates/accounts/registration_finished.html:6
 msgid "Registration Applied."
-msgstr "注册信息已受理"
-
-#: views.py:57
-msgid "Register"
-msgstr "注册"
-
-#: views.py:70
-msgid "Registration closed"
-msgstr "注册入口已关闭"
-
-#: views.py:84
-msgid "Registration finished"
 msgstr "注册信息已受理"
