--- a/www/upload/locale/zh/LC_MESSAGES/django.po
+++ b/www/upload/locale/zh/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-03-11 20:11+0800\n"
+"POT-Creation-Date: 2016-03-14 15:51+0800\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -16,18 +16,17 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
-#: templates/upload/base.html:37
+#: templates/upload/base.html:36 templates/upload/picture_list.html.py:3
 msgid "Gallary"
 msgstr "照片墙"
 
 #: templates/upload/picture_confirm_delete.html:3
-#: templates/upload/picture_list.html:3
-msgid "Picture List"
-msgstr "相册"
+msgid "Operation Confirm"
+msgstr "确认操作"
 
 #: templates/upload/picture_confirm_delete.html:7
 msgid "Are you sure?"
-msgstr "你确定吗？"
+msgstr "您确定吗？"
 
 #: templates/upload/picture_confirm_delete.html:8
 msgid "Are you sure you want to delete this picture?"
@@ -40,6 +39,10 @@ msgstr "是的，我确定"
 #: templates/upload/picture_confirm_delete.html:14
 msgid "No, take me back"
 msgstr "不，返回"
+
+#: templates/upload/picture_form.html:3
+msgid "Image Upload"
+msgstr "图片上传"
 
 #: templates/upload/picture_form.html:8
 msgid "LIST PICTURE"
