--- a/www/charade/locale/zh/LC_MESSAGES/django.po
+++ b/www/charade/locale/zh/LC_MESSAGES/django.po
@@ -8,13 +8,17 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-03-18 11:57+0800\n"
+"POT-Creation-Date: 2016-03-23 15:45+0800\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+
+#: templates/charade/about.html:6
+msgid "TAKE MY HAT OFF to #Fu Tian English Corner# from 2010-2016."
+msgstr "致敬 #福田英语角# 从 2010-2016 年。"
 
 #: templates/charade/board.html:8
 msgid "Previous"
@@ -100,16 +104,28 @@ msgstr "请先登录"
 msgid "Score-Board"
 msgstr "积分榜"
 
-#: templates/charade/nav.html:42
-msgid "View Profile"
-msgstr "查阅个人资料"
+#: templates/charade/nav.html:43
+msgid "View profile"
+msgstr "查看个人资料"
 
-#: templates/charade/nav.html:47 templates/charade/nav.html.py:48
-msgid "Sign Out"
+#: templates/charade/nav.html:49
+msgid "Signed in as"
+msgstr "欢迎您"
+
+#: templates/charade/nav.html:56
+msgid "Your profile"
+msgstr "个人资料"
+
+#: templates/charade/nav.html:61
+msgid "Help"
+msgstr "帮助"
+
+#: templates/charade/nav.html:67
+msgid "Sign out"
 msgstr "注销"
 
-#: templates/charade/nav.html:53 templates/charade/nav.html.py:54
-msgid "Sign In"
+#: templates/charade/nav.html:75
+msgid "Sign in"
 msgstr "登录"
 
 #: templates/charade/play.html:22
